--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ body {
 }
 .navbar-collapse {
     flex-grow: 0;
+    background-color: #F3F3F3;
+    padding: 20px;
 }
 .active {
     color: var(--main-color) !important;
@@ -170,6 +172,7 @@ body {
     }
     .title-about p {
         font-size: 16px !important;
+        padding: 0 10px;
     }
 }
 @media (min-width: 991px) and (max-width:1200px) {
@@ -311,6 +314,11 @@ body {
 }
 .price {
     color: var(--main-color);
+    text-align: center;
+    padding: 0 30px 0 0;
+}
+p.col-8 {
+    padding-right: 20px;
 }
 /* product */
 /* testimonils */
