--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,6 @@ body {
 }
 .navbar-collapse {
     flex-grow: 0;
-    background-color: #F3F3F3;
     padding: 20px;
 }
 .active {
@@ -174,6 +173,9 @@ body {
         font-size: 16px !important;
         padding: 0 10px;
     }
+    .navbar-collapse {
+        background-color: #F3F3F3;
+            }
 }
 @media (min-width: 991px) and (max-width:1200px) {
     .mainTitle h1 {
