--- a/css/main.css
+++ b/css/main.css
@@ -1,497 +1,530 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Neo Sans Arabic Regular';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Neo Sans Arabic Regular";
 }
 :root {
-    --main-color : #F49916;
-    --white-color : #FFFFFF;
+  --main-color: #f49916;
+  --white-color: #ffffff;
 }
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 body {
-    direction: rtl;
+  direction: rtl;
+}
+/* scrollbar  */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--main-color);
+  border-radius: 10px;
 }
 .bg-body-tertiary {
-    background-color: var(--white-color) !important;
+  background-color: var(--white-color) !important;
 }
 /* NAV */
 .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
 }
 .bg-body-tertiary {
-    background-color: transparent !important;
+  background-color: transparent !important;
 }
 .bg-body-tertiary.show {
-    background-color: #F9F9F9 !important;
+  background-color: #f9f9f9 !important;
 }
 .navbar-collapse {
-    flex-grow: 0;
-    padding: 20px;
+  flex-grow: 0;
+  padding: 20px;
 }
 .active {
-    color: var(--main-color) !important;
+  color: var(--main-color) !important;
 }
 .nav-link {
-    font-size: 18px;
+  font-size: 18px;
 }
 @media (min-width: 1200px) {
-    .nav-link {
-        padding: 0 25px !important;
-    }
+  .nav-link {
+    padding: 0 25px !important;
+  }
 }
 .navbar-nav .nav-link:hover {
-    color: #F49916 !important;
+  color: #f49916 !important;
 }
 /* NAV */
 /* scrollDown */
 .scrollDown {
-    font-size: 18px;
-    color: var(--white-color);
-    background-color: #F49916;
-    padding: 11px 13px;
-    border-radius: 8px;
-    transition: all 0.3s;
+  font-size: 18px;
+  color: var(--white-color);
+  background-color: #f49916;
+  padding: 11px 13px;
+  border-radius: 8px;
+  transition: all 0.3s;
+    margin: 0;
 }
 .scrollDown:hover {
-    background-color: #F3F3F3;
-    color: #F49916;
+  background-color: #f3f3f3;
+  color: #f49916;
 }
 /* scrollDown */
 /* hero */
 .hero {
-    position: relative;
+  position: relative;
 }
 /* hero */
 /* swiper */
 .swiper {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 15px;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 15px;
 }
 .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 .swiper-slide .img-slider {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+  display: block;
+  width: 99%;
+  height: 100%;
+  object-fit: cover;
+}
 .swiper-pagination {
-    bottom: 20px;
+  bottom: 20px;
 }
 .swiper-pagination-bullet-active {
-    background-color: var(--main-color) !important;
+  background-color: var(--main-color) !important;
 }
 .swiper-pagination-bullet {
-    width: 14px !important;
-    height: 14px !important;
+  width: 14px !important;
+  height: 14px !important;
 }
 .mySwiper1 {
-    overflow-x: clip !important;
+  overflow-x: clip !important;
 }
 /* swiper */
 /* mainTitle */
 .mainTitle {
-    position: absolute;
-    top: 20%;
-    right: 6%;
-    z-index: 2;
+  position: absolute;
+  top: 20%;
+  right: 6%;
+  z-index: 2;
 }
 .mainTitle h1 {
-    font-weight: 700;
-    font-size: 40px;
-    letter-spacing: 0.01em;
-    color: #fff;
-
+  font-weight: 700;
+  font-size: 40px;
+  letter-spacing: 0.01em;
+  color: #fff;
 }
 .mainTitle span {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 .mainTitle p {
+  font-weight: 400;
+  font-size: 30px;
+  width: 50%;
+  line-height: 40px;
+  text-align: justify;
+  margin-bottom: 50px;
+  color: #fff;
+}
+@media (max-width: 991px) {
+  .mainTitle {
+    position: static;
+    text-align: center;
+  }
+  .mainTitle h1 {
+    font-size: 25px;
+    color: #000;
+  }
+  .mainTitle p {
     font-weight: 400;
+    font-size: 20px;
+    width: 100%;
+    line-height: 40px;
+    text-align: center;
+    margin-bottom: 30px;
+    color: #000;
+  }
+  .order {
+    margin-bottom: 20px;
+    display: inline-block;
+  }
+  .title-about p {
+    font-size: 16px !important;
+    padding: 0 10px;
+  }
+  .navbar-collapse {
+    background-color: #f9f9f9;
+  }
+  .swiper-pagination {
+    display: none;
+  }
+}
+@media (min-width: 991px) and (max-width: 1200px) {
+  .mainTitle h1 {
     font-size: 30px;
+  }
+  .mainTitle p {
+    font-weight: 400;
+    font-size: 25px;
     width: 50%;
     line-height: 40px;
     text-align: justify;
-    margin-bottom: 50px;
-    color: #fff;
-}
-@media (max-width: 991px) {
-    .mainTitle {
-        position: static;
-        text-align: center;
-    }
-    .mainTitle h1 {
-        font-size: 25px;
-        color: #000;
-    }
-    .mainTitle p {
-        font-weight: 400;
-        font-size: 20px;
-        width: 100%;
-        line-height: 40px;
-        text-align: center;
-        margin-bottom: 30px;
-        color: #000;
-    }
-    .order {
-        margin-bottom: 20px;
-        display: inline-block;
-    }
-    .title-about p {
-        font-size: 16px !important;
-        padding: 0 10px;
-    }
-    .navbar-collapse {
-        background-color: #F9F9F9;
-    }
-    .swiper-pagination {
-        display: none;
-    }
-}
-@media (min-width: 991px) and (max-width:1200px) {
-    .mainTitle h1 {
-        font-size: 30px;
-    }
-    .mainTitle p {
-        font-weight: 400;
-        font-size: 25px;
-        width: 50%;
-        line-height: 40px;
-        text-align: justify;
-        margin-bottom: 30px;
-    }
+    margin-bottom: 30px;
+  }
 }
 /* mainTitle */
 /* order */
 .order {
-    font-size: 18px;
-    color: var(--white-color);
-    background-color: #F49916;
-    padding: 11px 13px;
-    border-radius: 8px;
-    transition: all 0.3s;
+  font-size: 18px;
+  color: var(--white-color);
+  background-color: #f49916;
+  padding: 11px 13px;
+  border-radius: 8px;
+  transition: all 0.3s;
 }
 .order:hover {
-    background-color: #F3F3F3;
-    color: #F49916;
+  background-color: #f3f3f3;
+  color: #f49916;
 }
 .goToNextSection {
-    background-color: var(--main-color);
-    width: 60px;
-    height: 60px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+  background-color: var(--main-color);
+  width: 60px;
+  height: 60px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .goToNextSection1 {
-    background-color: var(--main-color);
-    width: 60px;
-    height: 60px;
-    align-items: center;
-    justify-content: center;
-    display: none;
-    border-radius: 50%;
-    position: fixed;
-    left: 30px;
-    bottom: 20px;
-    z-index: 9999;
+  background-color: var(--main-color);
+  width: 60px;
+  height: 60px;
+  align-items: center;
+  justify-content: center;
+  display: none;
+  border-radius: 50%;
+  position: fixed;
+  left: 30px;
+  bottom: 20px;
+  z-index: 9999;
 }
+ 
 .goToNextSection1 img {
-    transform: rotate(180deg)
+  transform: rotate(180deg);
 }
 .goToNextSection a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .goToNextSection img {
-    animation-duration: 0.3s;
-    animation-name: down-up;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    position: absolute;
-    animation-direction: alternate;
+  animation-duration: 0.5s;
+  animation-name: down-up;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  position: absolute;
+  animation-direction: alternate;
 }
 @keyframes down-up {
-    to {
-        transform: translateY(10px);
-    }
+  to {
+    transform: translateY(10px);
+  }
 }
 /* order */
 /* product */
 .product {
-    padding-top: 150px;
+  padding-top: 100px;
 }
 .product-list {
-    padding-top: 150px;
+  padding-top: 100px;
 }
 .testimonials {
-    padding-top: 150px;
+  padding-top: 150px;
 }
 .hero {
-    padding-top: 120px;
+  padding-top: 120px;
 }
 .faq {
-    padding-top: 150px;
+  padding-top: 150px;
 }
 #orderNow {
-    padding-top: 150px;
+  padding-top: 80px;
 }
 .main-section {
-    text-align: center;
-    margin-bottom: 100px;
+  text-align: center;
+  margin-bottom: 100px;
 }
 .main-section p {
-    font-size: 35px;
-    margin-bottom: 0;
+  font-size: 35px;
+  margin-bottom: 0;
 }
 .main-section h5 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 .title-about {
-    padding: 40px 0 0 0px;
-    margin-left: 0px;
+  padding: 40px 0 0 0px;
+  margin-left: 0px;
 }
 .title-about p {
-    font-size: 27px;
-    text-align: justify;
+  font-size: 27px;
+  text-align: justify;
 }
 .title-about span {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 .product-list .contnet img {
-    margin-bottom: 6%;
+  margin-bottom: 6%;
 }
 .img-about {
-    text-align: end;
+  text-align: end;
 }
-@media (max-width:767px) {
-    .title-about {
-        width: 100% !important;
-    }
-    .img-about {
-        width: 100% !important;
-    }
-    .product-layout {
-        flex-direction: column-reverse;
-    }
-    .title-about p {
-        font-size: 17px;
-        text-align: center;
-    }
-    .img-container {
-        left: 50% !important;
-        transform: translate(-50%,-50%) !important;
-    }
-    .img-container {
-        position: absolute;
-        left: 0;
-        display: flex;
-        top: -50%;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-        width: 100%;
-    }
-    .orderNow {
-        margin-top: 200px;
-        background: #F9F9F9;
-        box-shadow: 0px 4px 20px rgb(29 29 29 / 10%);
-        border-radius: 12px;
-        position: relative;
-        height: 323px;
-        padding: 49px 3px 0px 0px !important ;
-        }
-        .order-here  {
-            top: 82% !important; 
-        }
-        .orderNow p {
-            font-size: 31px !important;
-        }
+@media (max-width: 767px) {
+  .title-about {
+    width: 100% !important;
+  }
+  .img-about {
+    width: 100% !important;
+  }
+  .product-layout {
+    flex-direction: column-reverse;
+  }
+  .title-about p {
+    font-size: 17px;
+    text-align: center;
+  }
+  .img-container {
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+  }
+  .img-container {
+    position: absolute;
+    left: 0;
+    display: flex;
+    top: -50%;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
+  .orderNow {
+    margin-top: 200px;
+    background: #f9f9f9;
+    box-shadow: 0px 4px 20px rgb(29 29 29 / 10%);
+    border-radius: 12px;
+    position: relative;
+    height: 323px;
+    padding: 49px 3px 0px 0px !important ;
+  }
+  .order-here {
+    top: 82% !important;
+  }
+  .orderNow p {
+    font-size: 31px !important;
+  }
 }
 .three-section {
-    margin-bottom: 100px;
+  margin-bottom: 100px;
 }
-.price {
+/* .price {
     color: var(--main-color);
     text-align: center;
     padding: 0 30px 0 0;
-}
+} */
 p.col-8 {
-    padding-right: 20px;
+  padding-right: 20px;
 }
 /* product */
 /* testimonils */
 .card-testimonials {
-    width: 415px;
-    height: 213px;
-    background: #F3F3F3;
-    border-radius: 20px;
-    border: none;
-    position: relative;
-    text-align: center;
-    padding: 50px;
+  width: 415px;
+  height: 415px;
+  background: #f3f3f3;
+  border-radius: 20px;
+  border: none;
+  position: relative;
+  text-align: center;
+  padding: 50px;
 }
 .card-testimonials .main-img {
-    width: 79px;
-    height: 79px;
-    position: absolute;
-    left: 50%;
-    top: -40px;
-    transform: translateX(-50%);
+  width: 79px;
+  height: 79px;
+  position: absolute;
+  left: 50%;
+  top: -40px;
+  transform: translateX(-50%);
+}
+.rev5 {
+  font-size: 16px;
 }
 /* testimonils */
 .accordion-button::after {
-    background-image: url(../img/down\ copy.svg);
+  background-image: url(../img/down\ copy.svg);
 }
 .accordion-item {
-    border: none;
-    border-bottom: 1px solid #ddd;
+  border: none;
+  border-bottom: 1px solid #ddd;
 }
 .accordion-button:not(.collapsed) {
-    background-color: #ffba58;
-    color: #F3F3F3;
+  background-color: #ffba58;
+  color: #f3f3f3;
 }
 .accordion-button:focus {
-    background-color: #F49916;
-    color: #F3F3F3;
-    box-shadow: none;
+  background-color: #f49916;
+  color: #f3f3f3;
+  box-shadow: none;
 }
 .accordion-button:not(.collapsed)::after {
-    background-image: url(../img/down.svg);
-    transform: var(--bs-accordion-btn-icon-transform);
+  background-image: url(../img/down.svg);
+  transform: var(--bs-accordion-btn-icon-transform);
 }
 /* footer */
 .foooter {
-    margin-top: 50px;
-    padding: 130px 0 50px 0;
-    background: #fffafa;
+  margin-top: 50px;
+  padding: 130px 0 50px 0;
+  background: #fffafa;
 }
 .img-container img {
-    border-radius: 50%; 
-    width: 100%;
-    height: 100%;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
 }
 .orderNow {
-    margin-top: 200px;
-    background: #F9F9F9;
-    box-shadow: 0px 4px 20px rgba(29, 29, 29, 0.1);
-    border-radius: 12px;
-    position: relative;
-    height: 323px;
-    padding: 50px;
+  margin-top: 200px;
+  background: #f9f9f9;
+  box-shadow: 0px 4px 20px rgba(29, 29, 29, 0.1);
+  border-radius: 12px;
+  position: relative;
+  height: 323px;
+  padding: 50px;
 }
 .img-container {
+  position: absolute;
+  left: 0;
+  top: 0%;
+  transform: translateY(-50%);
+  width: 200px;
+  height: 200px;
+}
+@media (min-width: 1200px) {
+  .img-container {
+    left: 57px !important;
+    top: 19% !important;
+  }
+}
+@media (min-width: 767px) {
+  .img-container {
     position: absolute;
     left: 0;
     top: 0%;
     transform: translateY(-50%);
-    width: 200px;
-    height: 200px;
-}
-@media (min-width:1200px) {
-    .img-container  {
-        left: 57px !important;
-        top: 19% !important;
-    }
-}
-@media (min-width:767px) {
-    .img-container {
-        position: absolute;
-        left: 0;
-        top: 0%;
-        transform: translateY(-50%);
-        width: 350px;
-        height: 350px;
-    }
+    width: 350px;
+    height: 350px;
+  }
 }
 .orderNow h5 {
-    font-size: 38px;
-    color: #F49916;
-    font-weight: bold;
+  font-size: 38px;
+  color: #f49916;
+  font-weight: bold;
 }
 .orderNow p {
-    font-size: 40px;
-    color: #1F1F1F;
-    padding-right: 50px;
-    padding-top: 20px;
+  font-size: 40px;
+  color: #1f1f1f;
+  padding-right: 50px;
+  padding-top: 20px;
 }
 .order-here {
-    font-size: 18px;
-    color: var(--white-color);
-    background-color: #F49916;
-    padding: 11px 13px;
-    border-radius: 8px;
-    position: absolute;
-    left: 50%;
-    top: 70%;
-    transform: translateX(-50%);
-    transition: all 0.3s;
+  font-size: 18px;
+  color: var(--white-color);
+  background-color: #f49916;
+  padding: 11px 13px;
+  border-radius: 8px;
+  position: absolute;
+  left: 50%;
+  top: 70%;
+  transform: translateX(-50%);
+  transition: all 0.3s;
 }
 .order-here:hover {
-    background-color: #F3F3F3;
-    color: #F49916;
+  background-color: #f3f3f3;
+  color: #f49916;
 }
 .ul-footer {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 .ul-footer li {
-    padding: 5px 0;
+  padding: 5px 0;
 }
 .ul-footer img {
-    transform: rotate(-270deg);
+  transform: rotate(-270deg);
 }
 .ul-footer .contant {
-    transform: rotate(0deg);
-    padding-left: 2px;
+  transform: rotate(0deg);
+  padding-left: 2px;
 }
 .nav-link1 {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 .ul-footer li a {
-    text-decoration: none;
-    color: black;
-    transition: all 0.3s;
+  text-decoration: none;
+  color: black;
+  transition: all 0.3s;
 }
 .ul-footer li a:hover {
-    color: #F49916;
+  color: #f49916;
 }
-.contnet  img {
-    border-radius: 25px;
+.contnet img {
+  border-radius: 25px;
 }
 .ul-footer li {
-    transition: all 0.3s;
+  transition: all 0.3s;
 }
 .ul-footer li:hover {
-    transform: translateX(-10px);
+  transform: translateX(-10px);
+}
+#description {
+  padding: 100px 0;
+}
+
+p.t-des {
+  font-size: 23px;
+}
+.des {
+  width: 350px;
+  height: 350px;
+  width: 100%;
+  object-fit: cover;
+}
+.main{
+    box-shadow: 0px 4px 20px rgb(29 29 29 / 20%);
+    margin-top: 30px;
+}
+.span-color {
+  color: var(--main-color);
+  font-weight: normal;
 }
