--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ body {
 }
 .swiper-slide .img-slider {
   display: block;
-  width: 99%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
@@ -507,10 +507,12 @@ p.col-8 {
 .ul-footer li:hover {
   transform: translateX(-10px);
 }
+.footer-img {
+  margin-bottom: 20px;
+}
 #description {
   padding: 100px 0;
 }
-
 p.t-des {
   font-size: 23px;
 }
