--- a/css/main.css
+++ b/css/main.css
@@ -153,9 +153,13 @@ body {
     text-align: center;
   }
   .mainTitle h1 {
-    font-size: 25px;
-    color: #000;
-  }
+    font-size: 20px;
+    color: #f3f3f3;
+    position: absolute;
+    top: 50px;
+    z-index: 9999;
+    width: 42%;
+  }  
   .mainTitle p {
     font-weight: 400;
     font-size: 20px;
@@ -529,4 +533,9 @@ p.t-des {
 .span-color {
   color: var(--main-color);
   font-weight: normal;
+}
+.rights {
+  background-color: #f49916;
+  padding: 15px 70px;
+  color: #f3f3f3;
 }
