--- a/css/main.css
+++ b/css/main.css
@@ -260,24 +260,6 @@ body {
 }
 /* order */
 /* product */
-.product {
-  padding-top: 100px;
-}
-.product-list {
-  padding-top: 100px;
-}
-.testimonials {
-  padding-top: 150px;
-}
-.hero {
-  padding-top: 120px;
-}
-.faq {
-  padding-top: 150px;
-}
-#orderNow {
-  padding-top: 80px;
-}
 .main-section {
   text-align: center;
   margin-bottom: 100px;
@@ -353,11 +335,6 @@ body {
 .three-section {
   margin-bottom: 100px;
 }
-/* .price {
-    color: var(--main-color);
-    text-align: center;
-    padding: 0 30px 0 0;
-} */
 p.col-8 {
   padding-right: 20px;
 }
@@ -534,8 +511,23 @@ p.t-des {
   color: var(--main-color);
   font-weight: normal;
 }
-.rights {
-  background-color: #f49916;
-  padding: 15px 70px;
-  color: #f3f3f3;
+/* sections */
+.product {
+  padding-top: 100px;
 }
+.product-list {
+  padding-top: 100px;
+}
+.testimonials {
+  padding-top: 150px;
+}
+.hero {
+  padding-top: 120px;
+}
+.faq {
+  padding-top: 150px;
+}
+#orderNow {
+  padding-top: 80px;
+}
+/* sections */
