--- a/css/main.css
+++ b/css/main.css
@@ -531,3 +531,18 @@ p.t-des {
   padding-top: 80px;
 }
 /* sections */
+
+
+.fade-test {
+  animation-name: fade;
+  animation-duration: 3s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
