--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,7 @@ body {
 }
 .product-list .contnet img {
   margin-bottom: 6%;
+  box-shadow: -7px 5px 16px 1px rgba(56, 86, 122, 0.6);
 }
 .img-about {
   text-align: end;
